# gym-line-follower

./: .gitignore  CMakeLists.txt  README.md  setup.py
examples/: pid.py
gym_line_follower/: bot_config.json  line_follower_bot.py  track.py  track_generator.py  track_plane_builder.py  utils.py
gym_line_follower/envs/: line_follower_env.py
gym_line_follower/genetic/: bindings.cpp  collision.hpp  de.py  fitness.py  primitives.cpp  primitives.hpp
gym_line_follower/irsensor/: bindings.cpp  irsensor.cpp  irsensor.hpp
gym_line_follower/trackutils/: bindings.cpp  collision.cpp  collision.hpp  primitives.hpp
